[package]
name = "wolf_quotes"
version = "0.1.0"
authors = ["sergey duck <sergeypechnikov326@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vkapi = {branch="beta", git="https://github.com/DuckerMan/vk_api"}
tokio = {version="*", features=["full"]}
rand = "*"
markov = "*"
json = "*"
reqwest = "*"